# mcp-logs

./: .gitignore  README.md
log-agent/: Cargo.toml  LICENSE  README.md
log-agent/src/: main.rs  socket.rs  supervisor.rs
log-agent/src/capture/: mod.rs
log-agent/src/cli/: mod.rs
log-agent/src/config/: color_schemes.rs  loader.rs  mod.rs  themes.rs  types.rs
log-agent/src/tui/: app.rs  event.rs  mod.rs  ui.rs
log-agent/src/tui/ui/components/: header.rs  help.rs  logs.rs  mod.rs  status.rs  widgets.rs
log-agent/src/types/: mod.rs
mcp-logs/: .npmignore  README.md  config.ts  index.ts  package.json
mcp-logs/src/cli/: config.ts
mcp-logs/src/config/: generator.ts  index.ts  loader.ts  types.ts
mcp-logs/src/mcp/: handlers.ts  tools.ts
mcp-logs/src/server/: index.ts
mcp-logs/src/store/: index.ts
mcp-logs/src/types/: index.ts
mcp-logs/src/utils/: time.ts
