[package]
name = "mcp-log-agent"
version = "0.1.3"
edition = "2024"
authors = ["yacine yaici <yaiciy01@gmail.com>"]
description = "Real-time log capture CLI for development projects with MCP integration"
license = "MIT"
repository = "https://github.com/Yaici-Yacine/mcp-logs.git"
readme = "README.md"
keywords = ["logging", "mcp", "development", "real-time", "monitoring"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "mcp-log-agent"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.49", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.54", features = ["derive"] }
owo-colors = "4.2.3"
crossterm = { version = "0.29", features = ["event-stream"] }
ratatui = "0.30"
toml = "0.9.8"
dirs = "6.0"
regex = "1.11"
arboard = "3.4"

[package.metadata.deb]
maintainer = "Yacine Yaici <yaiciy01@gmail.com>"
copyright = "2025, Yacine Yaici <yaiciy01@gmail.com>"
license-file = ["LICENSE", "4"]
extended-description = """\
A real-time log capture CLI tool for development projects.
Integrates with MCP (Model Context Protocol) servers to provide
real-time log streaming and analysis capabilities."""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/mcp-log-agent", "usr/bin/", "755"],
    ["README.md", "usr/share/doc/mcp-log-agent/", "644"],
]
